--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "maps"
   ],
   "license": "MIT",
-  "author": "Your Name <you@example.com>",
+  "author": "Drashy Sesodia https://prismatic-naiad-07488d.netlify.app/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourname/react-native-places-autocomplete-lite.git"
+    "url": "https://github.com/Drew-drashy/react-native-places-autocomplete-lite"
   },
   "dependencies": {
     "axios": "^1.7.7"
@@ -25,5 +25,6 @@
   },
   "optionalDependencies": {
     "expo-constants": "^16.0.0"
-  }
+  },
+  "publishConfig": { "registry": "https://registry.npmjs.org/" }
 }
